# c4f

./: .dockerignore  .gitignore  .ocamlformat  .travis.yml  CHANGES.md  Dockerfile  LICENSE  LICENSE.herd  Makefile  README.md  act.opam  c11_lahav.cat  c4f.conf.example  c4f.opam  compiler.spec.example  dune-project  example.litmus
c/src/: delitmus.ml  dune  frontend.ml  fuzzer.ml  fuzzer_action.mli  fuzzer_action_intf.ml  fuzzer_state.mli  fuzzer_store.ml  fuzzer_subject.mli  fuzzer_var.ml  lexer.mli  mem_order.mli  mini.mli  mini_address.ml  mini_address.mli  mini_convert.ml  mini_convert.mli  mini_env_intf.ml  mini_expression.ml  mini_path.mli  mini_path_intf.ml  mini_reify.ml  mini_type.ml  mini_type.mli
config/: act.ml  act.mli  act_intf.ml  ast.ml  ast.mli  c_variables.ml  c_variables.mli  compiler.ml  compiler.mli  compiler_intf.ml  config.messages  cpp.ml  cpp.mli  dune  file_type.ml  file_type.mli  frontend.ml  frontend.mli  fuzz.ml  fuzz.mli  herd.ml  herd.mli  id.ml  id.mli  lexer.mll  litmus_tool.ml  litmus_tool.mli  machine.ml  machine.mli  machine_intf.ml  parser.mly  program.ml  program.mli  program_intf.ml  property.ml  property.mli  property_intf.ml  sanitiser_pass.ml  sanitiser_pass.mli  spec.ml  (+1 more)
config/src/: act.ml  ast.ml  ast.mli  compiler.ml  cpp.mli  file_type.mli  fuzz.mli  litmus_tool.mli  machine.ml  machine.mli  machine_intf.ml  program.ml  program_intf.ml  sanitiser_pass.ml
lang/: LangFrontend.ml  LangFrontend.mli  LangParser.mli  Language.ml  Language.mli  Litmus.ml  Litmus.mli  X86.ml  X86.mli  X86ATT.ml  X86ATT.mli  X86ATTLexer.mli  X86ATTLexer.mll  X86ATTParser.mly  X86Ast.ml  X86Ast.mli  X86Base.ml  X86Conv.ml  X86Conv.mli  X86Dialect.ml  X86Dialect.mli  X86PP.ml  X86PP.mli  X86Parser.mly  dune  lexMisc.ml  lexUtils.mll  parsedConstant.ml
lib/: Abstract.ml  Abstract.mli  Abstract_base.ml  Abstract_base.mli  Abstract_instruction.ml  Abstract_instruction.mli  Abstract_location.ml  Abstract_location.mli  Abstract_operand.ml  Abstract_operand.mli  Abstract_operands.ml  Abstract_operands.mli  Abstract_statement.ml  Abstract_statement.mli  Abstract_symbol.ml  Abstract_symbol.mli  Abstractable.ml  Abstractable_intf.ml  Analysis.ml  Analysis.mli  Asm_job.ml  Asm_job.mli  Compiler.ml  Compiler.mli  CompilerSpec.ml  CompilerSpec.mli  Compiler_intf.ml  Config.ml  Config.mli  Explainer.ml  Explainer.mli  Frontend.ml  Frontend.mli  Herd.ml  Herd.mli  Herd_output.ml  Herd_output.mli  Id.ml  Id.mli  LangFrontend.ml  (+151 more)
lib/abstract/src/: abstractable.ml  abstractable.mli  abstractable_intf.ml  abstractable_types.mli  address.ml  address.mli  dune  flag_enum.ml  flag_enum.mli  instruction.ml  instruction.mli  location.ml  location.mli  node.ml  node.mli  operand.ml  operand.mli  register.ml  register.mli  statement.ml  statement.mli  symbol.ml  symbol.mli
lib/act_common/src/: c_variables.mli  litmus_id.ml  redirect_map.ml  src_dst.mli
lib/asm/src/: dune  explainer.ml  explainer.mli  explainer_intf.ml  explanation.ml  explanation.mli  explanation_intf.ml  job.ml  job.mli  litmusifier.ml  litmusifier.mli  litmusifier_aux.ml  litmusifier_aux.mli  litmusifier_intf.ml  pipeline.ml  pipeline.mli  runner.ml  runner.mli  runner_intf.ml  stub_gen.ml  stub_gen.mli  stub_gen_intf.ml
lib/asm/test/: dune  litmusifier_aux.ml
lib/backend/: README.md
lib/backend/src/: arch.ml  arch.mli  bulk_intf.ml  capability.ml  capability.mli  diff.ml  diff.mli  dune  filter.ml  instance.ml  instance.mli  instance_types.mli  output.ml  output.mli  property.ml  property.mli  reader.ml  reader.mli  reader_types.mli  resolver_intf.ml  resolver_types.mli  runner.ml  runner.mli  runner_types.mli  spec.ml  spec.mli  state.ml  state.mli
lib/backend/test/: diff.ml  dune  property.ml  state.ml
lib/backend_herd/src/: dune  filter.ml  filter.mli  instance.ml  instance.mli  reader.ml  reader.mli  runner.ml  runner.mli
lib/backend_herd/test/: dune  instance.ml  reader.ml
lib/backend_herdtools_common/src/: dune  reader.ml  reader.mli  (+2 more)
lib/c_lang/: README.md
lib/cmd_machine/: dune  main.ml  xrun.ml
lib/common/: README.md
lib/common_cmd/: README.md
lib/compiler/: README.md
lib/compiler_gcc/: README.md
lib/config/: README.md
lib/fuzz/: README.md
lib/fuzz_run/: README.md
lib/litmus/: ast.mli  convert.ml  dune  pp.ml  pp.mli
lib/machine/: README.md
lib/state/: README.md
lib/utils/: README.md
regress_tests/: common.ml  common.mli  config.expected  config.ml  config_failures.expected  config_failures.ml  delitmus.expected  delitmus.ml  dump_header.expected  dump_header.ml  dump_stats.expected  dump_stats.ml  dune  explain.expected  explain.ml  fuzz_action_list.expected  fuzz_action_list.ml  fuzz_replays.expected  fuzz_replays.ml  herd_observations.expected  herd_observations.ml  litmus_failures.expected  litmus_failures.ml  litmus_observations.expected  litmus_observations.ml  litmusify.expected  litmusify.ml  reflexive_locmap.expected  reflexive_locmap.ml
utils/src/: c_identifier.mli  dune  frontend.mli  fs.ml  fs.mli  inherit.ml  inherit.mli  io.mli  lex_utils.mll  my_filename.mli  my_quickcheck.ml  my_set.ml  runner.mli  runner_intf.ml  tabulator.ml  timing.mli
x86/: ATTLexer.mli  ATTLexer.mll  ATTMessages.mli  ATTParser.mly  Ast.ml  Ast.mli  Base.ml  Conv.ml  Conv.mli  Dialect.ml  Dialect.mli  Frontend.ml  Frontend.mli  Language.ml  Language.mli  Language_instruction.ml  Language_instruction.mli  Litmus.ml  Litmus.mli  Opcode.ml  Opcode.mli  PP.ml  PP.mli  README.md  Sanitiser.ml  Sanitiser.mli  asm_job.ml  asm_job.mli  ast.ml  ast.mli  att_lexer.mli  att_lexer.mll  att_messages.mli  att_parser.mly  conv.ml  conv.mli  dialect.ml  dialect.mli  dialect_intf.ml  dialect_tag.ml  (+19 more)
x86/src/: asm_job.ml  asm_job.mli  ast.ml  att.messages  att_lexer.mli  att_parser.mly  dialect.ml  dialect.mli  dialect_intf.ml  dune  frontend.ml  frontend_intf.ml  language_definition.ml  language_definition.mli  language_instruction.ml  language_instruction.mli  opcode.ml  opcode.mli  pp.ml  pp.mli  pp_intf.ml  sanitiser.ml  sanitiser.mli  sanitiser_instance.ml  sanitiser_instance.mli
(+2058 files in other folders)
