opam-version: "2.0"
name: "act"
version: "v0.1"
synopsis: "Automagic compiler tormentor"
description:
  "'act' is a toolkit for testing memory-model behaviour of compilers."
maintainer: "Matt Windsor <m.windsor@imperial.ac.uk>"
authors: "Matt Windsor <m.windsor@imperial.ac.uk>"
license: "MIT"
homepage: "https://github.com/MattWindsor91/act"
bug-reports: "https://github.com/MattWindsor91/act/issues"
depends: [
  "dune" {build}
  "ppx_deriving" {build}
  "ppx_expect" {build}
  "ppx_jane" {build}
  "ppx_sexp_message" {build}
  "core" {>= "v0.11" & < "v0.12"}
  "core_extended" {>= "v0.11" & < "v0.12"}
  "fmt" {>= "0.8.5" & < "0.9"}
  "menhir" {>= "20181113"}
]
build: ["dune" "build" "-p" name "-j" jobs]
run-test: ["dune" "runtest" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/MattWindsor91/act"
