opam-version: "2.0"
synopsis: "Automagic compiler tormentor"
description:
  "'act' is a toolkit for testing memory-model behaviour of compilers."
maintainer: "Matt Windsor <m.windsor@imperial.ac.uk>"
authors: "Matt Windsor <m.windsor@imperial.ac.uk>"
license: "MIT"
homepage: "https://github.com/MattWindsor91/act"
bug-reports: "https://github.com/MattWindsor91/act/issues"
depends: [
  "ocaml" {>= "4.06"}
  "dune" {build}
  "ppx_deriving"
  "ppx_expect"
  "ppx_jane"
  "ppx_sexp_message"
  "core" {>= "v0.11" & < "v0.12"}
  "core_extended" {>= "v0.11" & < "v0.12"}
  "fmt" {>= "0.8.5" & < "0.9"}
  "menhir" {>= "20181113"}
  "travesty" {>= "v0.1.3" & < "v0.2"}
]
build: ["dune" "build" "-p" name "-j" jobs]
run-test: ["dune" "runtest" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/MattWindsor91/act"
