opam-version: "2.0"
synopsis: "Automagic compiler tormentor"
description:
  "'act' is a toolkit for testing memory-model behaviour of compilers."
maintainer: "Matt Windsor <m.windsor@imperial.ac.uk>"
authors: "Matt Windsor <m.windsor@imperial.ac.uk>"
license: "MIT"
homepage: "https://github.com/MattWindsor91/act"
bug-reports: "https://github.com/MattWindsor91/act/issues"
depends: [
  "ocaml" {>= "4.07"}
  "dune" {build}
  "ppx_deriving"
  "ppx_expect"
  "ppx_jane"
  "ppx_sexp_message"
  "core" {>= "v0.12" & < "v0.13"}
  "fmt" {>= "0.8.5" & < "0.9"}
  "fpath" {>= "0.7.2" & < "0.8"}
  "menhir" {>= "20181113"}
  "shell" {>= "v0.12" & < "v0.13"}
  "travesty" {>= "0.5.1" & < "0.6"}
  "textutils_kernel" {>= "v0.12" & < "v0.13"}
]
build: ["dune" "build" "-p" name "-j" jobs]
run-test: ["dune" "runtest" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/MattWindsor91/act"
