(library
 (name config)
 (inline_tests)
 (preprocess
  (pps ppx_deriving.std ppx_expect ppx_jane))
 (libraries
  fmt
  fpath
  menhirLib
  litmus
  utils
  travesty
  core_kernel))

;; Config file parser

(menhir
 (infer false)
 (flags "--table")
 (modules parser))

(ocamllex (modules lexer))

(rule
 (targets messages.ml)
 (action (with-stdout-to "%{targets}" (run "%{bin:menhir}" "--compile-errors" "%{dep:config.messages}" "parser.mly"))))
