;; -*- mode: lisp; -*-

(library
 (name lang)
 (inline_tests)
 (preprocess
  (pps ppx_deriving.std ppx_expect ppx_jane ppx_sexp_message))
  (libraries
   core
   utils
   menhirLib
   rresult)
  (modules_without_implementation LangParser))
(ocamllex
 (modules X86ATTLexer lexUtils))
(menhir
 (modules X86ATTParser))
