;; -*- mode: lisp; -*-

(library
 (name lib)
 (inline_tests)
 (preprocess
  (pps ppx_deriving.std ppx_expect ppx_jane))
 (libraries
  fmt
  fpath
  menhirLib
  abstract
  litmus
  utils
  travesty
  core))

;; Config file parser

(menhir
 (infer false)
 (flags "--table")
 (modules config_parser))

(ocamllex
 (modules lex_utils config_lexer))

(rule
 (targets config_messages.ml)
 (action (with-stdout-to "%{targets}" (run "%{bin:menhir}" "--compile-errors" "%{dep:config.messages}" "config_parser.mly"))))
