(tests
 (names config config_failures delitmus dump_header explain fuzz_replays
   fuzz_action_list herd_observations litmus_observations litmusify)
 (preprocess
  (pps ppx_jane))
 (libraries result yojson ppx_yojson_conv_lib sexplib0 base.caml core_kernel core stdio fmt
   common_cmd fpath travesty travesty.base_exts
   plumbing act.asm act.backend act.backend_herd act.backend_litmus
   act.c_mini act.common act.config act.delitmus act.fuzz act.litmus
   act.sanitiser act.state act.utils)
 (action
  (run %{test} input))
 (deps
  "input/asm/x86/att/spec.json"
  (glob_files "input/fuzz/replays/*.litmus")
  (glob_files "input/fuzz/replays/*.trace")
  (glob_files "input/config/valid/*.conf")
  (glob_files "input/config/failures/*.conf")
  (glob_files "input/litmus/*.litmus")
  (glob_files "input/asm/x86/att/*.s")
  (glob_files "input/observations/herd/*.txt")
  (glob_files "input/observations/litmus/*.txt")))
