(library
 (name common)
 (modules common)
 (preprocess
  (pps ppx_jane))
 (libraries result yojson ppx_yojson_conv_lib sexplib0 base.caml core_kernel
   core stdio fmt common_cmd fpath travesty travesty.base_exts plumbing
   act.backend act.backend_herd act.backend_litmus act.fir act.common
   act.config act.delitmus act.fuzz act.litmus act.state act.utils))

(executables
 (names config config_failures delitmus dump_header fuzz_replays
   fuzz_action_list herd_observations litmus_observations)
 (modules config config_failures delitmus dump_header fuzz_replays
   fuzz_action_list herd_observations litmus_observations)
 (preprocess
  (pps ppx_jane))
 (libraries result yojson ppx_yojson_conv_lib sexplib0 base.caml core_kernel
   core stdio fmt common_cmd fpath travesty travesty.base_exts plumbing
   act.backend act.backend_herd act.backend_litmus act.fir act.common
   act.config act.delitmus act.fuzz act.litmus act.state act.utils common))

(rule
 (deps
  (glob_files "input/config/valid/*.conf"))
 (action
  (with-stdout-to
   config.output
   (run ./config.exe input))))

(rule
 (alias runtest)
 (action
  (diff config.expected config.output)))

(rule
 (deps
  (glob_files "input/config/failures/*.conf"))
 (action
  (with-stdout-to
   config_failures.output
   (run ./config_failures.exe input))))

(rule
 (alias runtest)
 (action
  (diff config_failures.expected config_failures.output)))

(rule
 (deps
  (glob_files "input/litmus/*.litmus"))
 (action
  (with-stdout-to
   delitmus.output
   (run ./delitmus.exe input))))

(rule
 (alias runtest)
 (action
  (diff delitmus.expected delitmus.output)))

(rule
 (deps
  (glob_files "input/litmus/*.litmus"))
 (action
  (with-stdout-to
   dump_header.output
   (run ./dump_header.exe input))))

(rule
 (alias runtest)
 (action
  (diff dump_header.expected dump_header.output)))

(rule
 (deps
  (glob_files "input/fuzz/replays/*.litmus")
  (glob_files "input/fuzz/replays/*.trace"))
 (action
  (with-stdout-to
   fuzz_replays.output
   (run ./fuzz_replays.exe input))))

(rule
 (alias runtest)
 (action
  (diff fuzz_replays.expected fuzz_replays.output)))

(rule
 (action
  (with-stdout-to
   fuzz_action_list.output
   (run ./fuzz_action_list.exe input))))

(rule
 (alias runtest)
 (action
  (diff fuzz_action_list.expected fuzz_action_list.output)))

(rule
 (deps
  (glob_files "input/observations/herd/*.txt"))
 (action
  (with-stdout-to
   herd_observations.output
   (run ./herd_observations.exe input))))

(rule
 (alias runtest)
 (action
  (diff herd_observations.expected herd_observations.output)))

(rule
 (deps
  (glob_files "input/observations/litmus/*.txt"))
 (action
  (with-stdout-to
   litmus_observations.output
   (run ./litmus_observations.exe input))))

(rule
 (alias runtest)
 (action
  (diff litmus_observations.expected litmus_observations.output)))

(test
 (name dump_stats)
 (modules dump_stats)
 (preprocess
  (pps ppx_jane))
 (libraries result yojson ppx_yojson_conv_lib sexplib0 base.caml core_kernel
   core stdio fmt common_cmd fpath travesty travesty.base_exts plumbing
   act.fir act.common act.config act.litmus act.utils common)
 (action
  (run %{test} input))
 (deps
  (glob_files "input/litmus/*.litmus")))

(test
 (name litmus_failures)
 (modules litmus_failures)
 (preprocess
  (pps ppx_jane))
 (libraries result yojson ppx_yojson_conv_lib sexplib0 base.caml core_kernel
   core stdio fmt common_cmd fpath travesty travesty.base_exts plumbing
   act.fir act.common act.config act.litmus act.litmus_c act.utils common)
 (action
  (run %{test} input))
 (deps
  (glob_files "input/litmus/failures/*.litmus")))