;; -*- mode: lisp; -*-

(library
 (name x86)
 (inline_tests)
 (preprocess
  (pps ppx_deriving.std ppx_expect ppx_jane ppx_sexp_message))
  (libraries
   core
   abstract
   lib
   utils
   menhirLib))
(ocamllex
 (modules ATTLexer lexUtils))
(menhir
 (infer false)
 (flags "--table")
 (modules ATTParser))

;; These rules generate the error message tables for each parser.
;; They're probably not as portable as they could be.
(rule
 (targets ATTMessages.ml)
 (action (system "%{bin:menhir} --compile-errors %{dep:ATT.messages} ATTParser.mly > %{targets}")))
