;; -*- mode: lisp; -*-

(library
 (name c)
 (inline_tests)
 (preprocess
  (pps ppx_deriving.std ppx_expect ppx_jane ppx_sexp_message))
 (libraries core config abstract utils menhirLib))

(ocamllex
 (modules lexer))

(menhir
 (infer false)
 (flags "--table")
 (modules parser))

;; These rules generate the error message tables for each parser.
;; They're probably not as portable as they could be.

(rule
 (targets c_messages.ml)
 (action
  (with-stdout-to
   "%{targets}"
   (run "%{bin:menhir}" "--compile-errors" "%{dep:c.messages}" "parser.mly"))))
