;; -*- mode: lisp; -*-

(library
 (name x86)
 (inline_tests)
 (preprocess
  (pps ppx_deriving.std ppx_expect ppx_jane ppx_sexp_message))
 (libraries asm core_kernel travesty travesty.core_kernel_exts abstract lib
   litmus utils menhirLib))

(ocamllex
 (modules att_lexer))

(menhir
 (infer false)
 (flags "--table")
 (modules att_parser))

;; These rules generate the error message tables for each parser.
;; They're probably not as portable as they could be.

(rule
 (targets att_messages.ml)
 (action
  (with-stdout-to
   "%{targets}"
   (run "%{bin:menhir}" "--compile-errors" "%{dep:att.messages}"
     "att_parser.mly"))))
