;; -*- mode: lisp; -*-

(library
 (name act_abstract)
 (public_name act.abstract)
 (synopsis "Automagic Compiler Tormentor: abstract program model")
 (inline_tests)
 (modules_without_implementation abstractable_types)
 (preprocess
  (pps ppx_deriving.std ppx_jane))
 (libraries ppx_expect.config ppx_expect.common ppx_inline_test.config
   sexplib sexplib0 stdio base base.caml core_kernel fmt travesty
   travesty.base_exts act.common act.utils))
