;; -*- mode: lisp; -*-

(library
 (name act_asm)
 (public_name act.asm)
 (synopsis "Automagic Compiler Tormentor: assembly file manipulations")
 (inline_tests)
 (preprocess
  (pps ppx_deriving.std ppx_expect ppx_jane))
 (libraries core_kernel fmt fpath travesty travesty.core_kernel_exts
   act_abstract act_common act_config act_language act_sanitiser))
