;; -*- mode: lisp; -*-

(library
 (name act_asm)
 (public_name act.asm)
 (synopsis "Automagic Compiler Tormentor: assembly file manipulations")
 (inline_tests)
 (preprocess
  (pps ppx_deriving.std ppx_jane))
 (libraries sexplib0 stdio base base.caml core_kernel fmt fpath travesty
   travesty.base_exts plumbing act.utils act.common act.compiler act.abstract
   act.c_lang act.c_mini act.litmus act.config act.delitmus
   act.language act.machine act.sanitiser))
