;; -*- mode: lisp; -*-

(library
 (name act_backend_herd)
 (public_name act.backend_herd)
 (synopsis "Backend for the Herd7 multicore CPU simulator")
 (preprocess
  (pps ppx_deriving.std ppx_jane))
 (libraries stdio base base.caml core_kernel act.common act.plumbing
   act.backend act.backend_herdtools_common act.utils))
