;; -*- mode: lisp; -*-

(library
 (name act_backend_litmus)
 (public_name act.backend_litmus)
 (synopsis "Backend for the Litmus7 multicore CPU test runner")
 (preprocess
  (pps ppx_deriving.std ppx_jane))
 (libraries sexplib0 fpath stdio base base.caml core_kernel travesty
   travesty.base_exts act.common act.plumbing act.backend act.state
   act.backend_herdtools_common act.utils))
