;; -*- mode: lisp; -*-

(library
 (name act_c)
 (public_name act.c)
 (synopsis "Automagic Compiler Tormentor: C language support")
 (inline_tests)
 (preprocess
  (pps ppx_deriving.std ppx_jane))
 (libraries core_kernel menhirLib act_common act_config act_utils))

(ocamllex
 (modules lexer))

(menhir
 (infer false)
 (flags "--table")
 (modules parser))

;; These rules generate the error message tables for each parser.
;; They're probably not as portable as they could be.

(rule
 (targets c_messages.ml)
 (action
  (with-stdout-to
   "%{targets}"
   (run "%{bin:menhir}" "--compile-errors" "%{dep:c.messages}" "parser.mly"))))
