;; -*- mode: lisp; -*-

(library
 (name act_c_lang)
 (public_name act.c_lang)
 (synopsis "Automagic Compiler Tormentor: C AST and frontend")
 (inline_tests)
 (preprocess
  (pps ppx_deriving.std ppx_jane sedlex.ppx))
 (libraries ppx_inline_test.config ppx_expect.config ppx_expect.common
   sexplib0 base.caml core_kernel fmt menhirLib plumbing act.common act.config
   act.litmus act.sim act.utils sedlex travesty.base_exts)
 (flags :standard -w -39) ; Temporary; see https://github.com/ocaml-community/sedlex/pull/73
 )

(menhir
 (infer false)
 (flags "--table")
 (modules parser))

;; These rules generate the error message tables for each parser.
;; They're probably not as portable as they could be.

(rule
 (targets c_messages.ml)
 (action
  (with-stdout-to
   "%{targets}"
   (run "%{bin:menhir}" "--compile-errors" "%{dep:c.messages}" "parser.mly"))))
