;; -*- mode: lisp; -*-

(library
 (name act_c_mini)
 (public_name act.c_mini)
 (synopsis "Automagic Compiler Tormentor: C mini-model")
 (modules_without_implementation env_types types)
 (inline_tests)
 (preprocess
  (staged_pps ppx_import ppx_deriving.std ppx_jane))
 (libraries ppx_inline_test.config ppx_expect.config ppx_expect.common
   splittable_random sexplib0 stdio base.caml core_kernel fmt travesty
   travesty.base_exts plumbing act.common act.config act.litmus act.utils
   act.c_lang))
