;; -*- mode: lisp; -*-

(library
 (name act_c_mini)
 (public_name act.c_mini)
 (synopsis "Automagic Compiler Tormentor: C mini-model")
 (modules_without_implementation env_types types)
 (preprocess
  (pps ppx_deriving.std ppx_yojson_conv ppx_jane))
 (libraries ppx_inline_test.config ppx_expect.config ppx_expect.common
   splittable_random sexplib0 stdio base.caml core_kernel fmt travesty
   travesty.base_exts plumbing act.common act.litmus act.utils act.c_lang
   yojson ppx_yojson_conv.runtime-lib))
