;; -*- mode: lisp; -*-

(library
 (name act_c_mini)
 (public_name act.c_mini)
 (synopsis "Automagic Compiler Tormentor: C mini-model")
 (modules_without_implementation env_types expression_types types op_types
   statement_types)
 (preprocess
  (pps ppx_deriving.std ppx_yojson_conv ppx_jane))
 (libraries splittable_random sexplib0 stdio base.caml core_kernel fmt
   travesty travesty.base_exts travesty.containers plumbing act.common
   act.litmus act.utils act.c_lang yojson))
