; -*- mode: lisp; -*-

(library
 (name cmd_backend)
 ; This module is deliberately left private, as it's so tightly coupled to the
 ; act binaries that it's not particularly useful on its own.
 (preprocess
  (pps ppx_jane))
 (libraries stdio base base.caml core_kernel fmt yojson plumbing
   toplevel act.backend act.common act.config
   act.state act.utils))
