; -*- mode: lisp; -*-

(library
 (name cmd_c)
 ; This module is deliberately left private, as it's so tightly coupled to the
 ; act binaries that it's not particularly useful on its own.
 (preprocess
  (pps ppx_jane))
 (libraries stdio base base.caml core_kernel core fmt fpath yojson plumbing
   common_cmd act.backend act.c_lang act.c_mini act.common act.compiler
   act.config act.delitmus act.litmus act.machine act.utils))
