; -*- mode: lisp; -*-

(library
 (name cmd_c)
 ; This module is deliberately left private, as it's so tightly coupled to the
 ; act binaries that it's not particularly useful on its own.
 (preprocess
  (pps ppx_jane))
 (libraries sexplib0 stdio base base.caml core_kernel core fmt fpath yojson
   plumbing common_cmd act.litmus_c act.fir act.common act.config
   act.delitmus act.litmus act.utils))
