; -*- mode: lisp; -*-

(library
 (name cmd_fuzz)
 ; This module is deliberately left private, as it's so tightly coupled to the
 ; act binaries that it's not particularly useful on its own.
 (preprocess
  (pps ppx_jane))
 (libraries sexplib0 stdio base base.caml core_kernel core fmt fpath plumbing
   shell common_cmd act.common act.config act.fuzz act.fuzz_run act.utils))
