;; -*- mode: lisp; -*-

(library
 (name act_common)
 (public_name act.common)
 (inline_tests)
 (synopsis "Automagic Compiler Tormentor: common infrastructure")
 (modules_without_implementation property_types)
 (preprocess
  (pps ppx_deriving.std ppx_jane))
 (libraries ppx_inline_test.config ppx_expect.config ppx_expect.common
   bin_prot bin_prot.shape sexplib sexplib0 stdio fmt shell.string_extended
   core_kernel base base.caml travesty travesty.base_exts act.utils plumbing
   yojson))
