;; -*- mode: lisp; -*-

(library
 (name c4f_common)
 (public_name c4f.common)
 (synopsis "c4f: common infrastructure")
 (preprocess
  (pps ppx_deriving.std ppx_accessor ppx_jane))
 (libraries bin_prot bin_prot.shape sexplib sexplib0 stdio fmt
   shell.string_extended core_kernel base base.caml accessor accessor_base
   travesty travesty.base_exts c4f.utils plumbing yojson))
