;; -*- mode: lisp; -*-

(library
 (name c4f_common_test)
 (inline_tests)
 (preprocess
  (pps ppx_jane))
 (libraries sexplib0 expect_test_helpers_core ppx_expect.common
   ppx_expect.config ppx_expect.config_types fmt ppx_inline_test.config base
   base.caml core fpath stdio plumbing c4f.common c4f.utils))
