; -*- mode: lisp; -*-

(library
 (name common_cmd)
 ; This module is deliberately left private, as it's so tightly coupled to the
 ; act binaries that it's not particularly useful on its own.
 (preprocess
  (pps ppx_jane))
 (libraries yojson sexplib0 stdio base.caml core_kernel core fpath fmt
   fmt.tty unix travesty.base_exts plumbing c4f.common c4f.config c4f.utils))
