; -*- mode: lisp; -*-

(library
 (name act_compiler)
 (public_name act.compiler)
 (synopsis "Automagic Compiler Tormentor: compiler specifications")
 (preprocess
  (pps ppx_deriving.std ppx_jane))
 (modules_without_implementation instance_types)
 (libraries base base.caml sexplib sexplib0 fmt fpath travesty
   travesty.base_exts core_kernel act.common act.utils act.plumbing
   act.backend))
