(library
 (name act_config)
 (public_name act.config)
 (synopsis
   "Automagic Compiler Tormentor: configuration and config file parsing")
 (preprocess
  (pps ppx_deriving.std ppx_jane sedlex.ppx))
 (libraries sexplib0 fmt fpath menhirLib travesty travesty.base_exts sedlex
   base.caml core_kernel plumbing act.common act.compiler act.litmus act.sim
   act.utils act.sanitiser act.machine))

;; Config file parser

(menhir
 (infer false)
 (flags "--table")
 (modules parser))

(rule
 (targets messages.ml)
 (action
  (with-stdout-to
   "%{targets}"
   (run "%{bin:menhir}" "--compile-errors" "%{dep:config.messages}"
     "parser.mly"))))
