(library
 (name c4f_config)
 (public_name c4f.config)
 (synopsis "c4f: configuration and config file parsing")
 (preprocess
  (pps ppx_deriving.std ppx_jane sedlex.ppx))
 (libraries sexplib0 fmt fpath menhirLib travesty travesty.base_exts sedlex
   base.caml core_kernel plumbing c4f.common c4f.litmus c4f.utils c4f.fuzz
   c4f.fuzz_run))

;; Config file parser

(menhir
 (flags "--table")
 (modules parser))

(rule
 (targets messages.ml)
 (action
  (with-stdout-to
   "%{targets}"
   (run "%{bin:menhir}" "--compile-errors" "%{dep:config.messages}"
     "parser.mly"))))
