(library
 (name c4f_config)
 (public_name c4f.config)
 (synopsis "c4f: configuration and config file parsing")
 (preprocess
  (pps ppx_deriving.std ppx_jane sedlex.ppx))
 (libraries sexplib0 fmt fpath menhirLib travesty travesty.base_exts sedlex
   base.caml core_kernel plumbing c4f.common c4f.litmus c4f.utils c4f.fuzz
   c4f.fuzz_run))

;; Config file parser

(menhir
 (flags "--table")
 (modules parser))

(rule
 (deps messages.check)
 (action
  (with-stdout-to
   messages.ml
   (run menhir --table %{dep:parser.mly} --compile-errors
     %{dep:config.messages}))))

(rule
 (with-stdout-to
  config.auto.messages
  (run menhir --table %{dep:parser.mly} --list-errors)))

(rule
 (with-stdout-to
  messages.check
  (run menhir --table %{dep:parser.mly} --compare-errors
    %{dep:config.auto.messages} --compare-errors %{dep:config.messages})))
